<resources>
    <string name="app_name">Smogometr</string>
    <string name="Smogometr" />
    <string name="smogometr">Smogometr</string>
    <string name="o_aplikacji">O aplikacji</string>
    <string name="pod_cz_urz_dzenie">Podłącz urządzenie</string>
    <string name="wersja_1_0">Wersja:1.0</string>
    <string name="wersja_1">Wersja 1.0</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="wykonaj_pomiary">Wykonaj pomiary</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="projekt_zak_ada_stworzenie_przeno_nego_miernika_poziomu_zanieczyszcze_komunikuj_cego_si_z_telefonem_wraz_z_aplikacj_umo_liwiaj_c_analiz_danych_i_baz_danych_pozwalaj_c_por_wnywa_dane_z_serii_urz_dze_npowodem_zainteresowania_tematem_by_o_du_o_zanieczyszczenie_powietrza_w_mojej_rodzinnej_miejscowo_ci_w_kt_rej_brak_jest_jakichkolwiek_stacji_pomiarowych_zrzut_ekranu_poni_ej_a_tak_e_widoczne_zanieczyszczenie_w_obr_bie_zakorkowanych_ulic_w_krakowie_o_ile_w_ma_ych_gminach_i_na_terenach_wiejskich_za_znaczn_wi_kszo_zanieczyszcze_odpowiada_niska_emisja_prawie_po_owa_ca_kowitej_emisji_py_u_zawieszonego_i_ok_91_wielopier_cieniowych_w_glowodor_w_aromatycznych_m_in_benzo_a_piernu_1_o_tyle_w_miastach_przewa_a_zanieczyszczenie_z_transportu_zar_wno_publicznego_jak_i_prywatnego_wed_ug_raportu_nik_w_du_ych_miastach_to_nawet_75_st_enia_redniorocznego_dwutlenku_azotu_2_ponadto_w_przypadku_czujnik_w_mierz_cy_poziom_zanieczyszczenia_py_ami_zawieszonymi_w_krakowie_ich_ilo_jest_znaczna_tak_w_przypadku_czujnik_w_mierz_cych_poziomy_tlenk_w_azotu_i_siarki_ich_liczno_jest_minimalna_zrzuty_ekranu_poni_ej_problemem_jest_tak_e_brak_odpowiedniej_ilo_ci_czujnik_w_w_pobli_u_ulic_o_zwi_kszonym_ruchu_samochodowym_nprzeno_ny_smogometr_zapewni_nie_tylko_dok_adniejsze_miejscowe_pomiary_zanieczyszcze_ale_umo_liwi_tak_e_pomiar_zanieczyszcze_w_miejscu_pracy_czy_nauki_wed_ug_plan_w_smogometr_ma_by_przeno_ny_i_jak_najmniejszy_tak_aby_mo_na_go_by_o_przypi_do_ubrania_czy_plecaka_po_czenie_z_aplikacj_i_danymi_gps_umo_liwi_nanoszenie_danych_pomiarowych_na_map_i_zwi_kszenie_wiadomo_ci_u_ytkownik_w_o_blisko_ci_zanieczyszcze_poprzez_nanoszenie_punkt_w_mo_liwe_b_dzie_wyznaczanie_czystszych_tras_przemieszczania_si_jako_urz_dzenie_przeno_ne_bez_konieczno_ci_monta_u_b_dzie_m_g_dokonywa_pomiar_w_w_wielu_miejscach_w_przeciwie_stwie_do_miernik_w_stacjonarnych_nponi_ej_zaprezentowane_zosta_y_zrzuty_ekranu_z_aplikacji_airly_obrazuj_ce_sie_czujnik_w_pod_czonych_do_serwisu_pierwszy_zrzut_w_r_dzinach_i_okolicy_dotyczy_wszystkich_rodzaj_w_czujnik_w_natomiast_kolejne_pokazuj_ce_krak_w_uwzgl_dniaj_czujniki_mierz_ce_dane_zanieczyszczenie">Projekt zakłada stworzenie przenośnego miernika poziomu zanieczyszczeń komunikującego się z telefonem, wraz z aplikacją umożliwiającą analizę danych i bazą danych pozwalającą porównywać dane z serii urządzeń. \nPowodem zainteresowania tematem było dużo zanieczyszczenie powietrza w mojej rodzinnej miejscowości, w której brak jest jakichkolwiek stacji pomiarowych (zrzut ekranu poniżej), a także widoczne zanieczyszczenie w obrębie zakorkowanych ulic w Krakowie. O ile w małych gminach i na terenach wiejskich za znaczną większość zanieczyszczeń odpowiada niska emisja (prawie połowa całkowitej emisji pyłu zawieszonego i ok 91% wielopierścieniowych węglowodorów aromatycznych m.in. benzo[a]piernu)1 , o tyle w miastach przeważa zanieczyszczenie z transportu zarówno publicznego jak i prywatnego (według raportu NIK w dużych miastach to nawet 75% stężenia średniorocznego dwutlenku azotu) 2 . Ponadto w przypadku czujników mierzący poziom zanieczyszczenia pyłami zawieszonymi w Krakowie ich ilość jest znaczna, tak w przypadku czujników mierzących poziomy tlenków azotu i siarki ich liczność jest minimalna(zrzuty ekranu poniżej). Problemem jest także brak odpowiedniej ilości czujników w pobliżu ulic o zwiększonym ruchu samochodowym. \nPrzenośny smogometr zapewni nie tylko dokładniejsze miejscowe pomiary zanieczyszczeń, ale umożliwi także pomiar zanieczyszczeń w miejscu pracy, czy nauki. Według planów smogometr ma być przenośny i jak najmniejszy, tak aby można go było przypiąć do ubrania, czy plecaka. Połączenie z aplikacją i danymi GPS umożliwi nanoszenie danych pomiarowych na mapę i zwiększenie świadomości użytkowników o bliskości zanieczyszczeń. Poprzez nanoszenie punktów możliwe będzie wyznaczanie „czystszych” tras przemieszczania się. Jako urządzenie przenośne bez konieczności montażu będzie mógł dokonywać pomiarów w wielu miejscach, w przeciwieństwie do mierników stacjonarnych. \nPoniżej zaprezentowane zostały zrzuty ekranu z aplikacji Airly obrazujące sieć czujników podłączonych do serwisu. Pierwszy zrzut w Rędzinach i okolicy dotyczy wszystkich rodzajów czujników, natomiast kolejne pokazujące Kraków uwzględniają czujniki mierzące dane zanieczyszczenie.</string>
    <string name="pm_no2_so2">PM, NO2, SO2</string>
    <string name="pm_no2_so2_t">PM, NO2, SO2</string>
    <string name="pm">PM</string>
    <string name="pm_t">PM</string>
    <string name="no2">NO2</string>
    <string name="no2_t">NO2</string>
    <string name="so2">SO2</string>
    <string name="so2_t">SO2</string>
    <string name="_1_https_polskialarmsmogowy_pl_smog_skad_sie_bierze_smog">1. https://polskialarmsmogowy.pl/smog/skad-sie-bierze-smog/</string>
    <string name="_2_https_www_nik_gov_pl_aktualnosci_zabojczy_smog_z_samochodowych_spalin_html">2. https://www.nik.gov.pl/aktualnosci/zabojczy-smog-z-samochodowych-spalin.html</string>
    <string name="przejd_do_mapy">Przejdź do mapy</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibXNpZW1pbnNraSIsImEiOiJjbG15bnE4bTUwMTVuMm9tdjRlc3d5MzZiIn0.vPDVojLaHsRKHSrSdhbIdA</string>
</resources>