<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="top|center">


    <TextView
        android:id="@+id/tSmogometr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smogometr"
        android:textSize="50sp"
        android:layout_marginBottom="20dp"
        android:gravity="top|center"/>

    <Button
        android:id="@+id/bConnectDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pod_cz_urz_dzenie"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/bMeasurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wykonaj_pomiary" />

    <Button
        android:id="@+id/bMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przejd_do_mapy" />

    <Button
        android:id="@+id/bSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ustawienia"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/bAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_aplikacji"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/wersja_1"
        android:textSize="11sp" />


</LinearLayout>